z-index bug fix for hit counter

--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -7,7 +7,7 @@
     color: $mainFontColor;
     position: fixed;
     top: 0;
-    z-index: 3;
+    z-index: 4;
     transition: all 1.5s ease;
 
     @include mobile {
